#266 - Fixed spacing and alignment issue of text formatting toolbar

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -641,6 +641,10 @@ input#send-to-input {
 			height: auto;
 			padding: 0 10px 0 0;
 
+			button.medium-editor-button-first {
+				padding-right: 6px;
+			}
+
 			button {
 				box-shadow: none;
 				padding: 10px 10px 10px 0;
