--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -712,6 +712,63 @@ a.bb-close-model {
 			}
 		}
 	}
+
+	.activity-comments {
+		clear: both;
+		margin: 0;
+		overflow: visible;
+		position: relative;
+		width: auto;
+
+		> ul {
+			background: #fbfbfc;
+			margin: 0 -15px;
+			padding: 15px 15px 0;
+			border-top: 1px solid #eef0f3;
+			border-radius: 0 0 4px 4px;
+			clear: both;
+			list-style: none;
+		}
+
+		ul li {
+			margin: 0;
+			padding: 0;
+			padding-bottom: 15px;
+		}
+
+		div.acomment-avatar {
+			margin: 0 15px 0 0;
+			width: auto;
+			text-align: left;
+		}
+
+		.acomment-meta {
+			font-size: 13px;
+			overflow: hidden;
+		}
+
+		.acomment-content {
+			border-left: 0;
+			margin: 0 0 0 51px;
+			padding: 0;
+
+			.bb-activity-media-wrap {
+				margin: 15px 0;
+			}
+		}
+
+		.action {
+			line-height: 1;
+			margin-left: 51px;
+		}
+
+		form {
+			background: #fbfbfc;
+			margin: 0 -15px;
+			margin-right: 0;
+			padding: 15px 15px 0;
+		}
+	}
 }
 
 .bb-media-info-header {
