--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -1223,6 +1223,11 @@ span.dashicons.dashicons-admin-file:before {
 		&.is-visible {
 			z-index: 112;
 
+			.document-action_more[data-balloon]:before,
+			.document-action_more[data-balloon]:after {
+				display: none;
+			}
+
 			.document-action-wrap,
 			.document-action_list {
 				opacity: 1;
