#266 - Replaced dashicons with bb icons

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1415,8 +1415,8 @@ ul.bb-albums-list {
 	overflow: auto;
 }
 
-.bb-model-close-button .dashicons {
-	font-size: 22px;
+.bb-model-close-button .bb-icon-close {
+	font-size: 22px !important;
 }
 
 .bb-field-wrap,
