--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12888,8 +12888,8 @@ ul.bb-albums-list .bb-more-photos strong {
   overflow: auto;
 }
 
-.bb-model-close-button .dashicons {
-  font-size: 22px;
+.bb-model-close-button .bb-icon-close {
+  font-size: 22px !important;
 }
 
 .bb-field-wrap,
