--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -499,28 +499,6 @@
 		height: auto;
 	}
 
-	#forums-document-button,
-	#messages-document-button {
-		float: left;
-		margin-top: -4px;
-	}
-
-	#activity-document-button {
-		float: left;
-		margin-top: -6px;
-	}
-
-	.bb-icon-attach {
-
-		&:before {
-			font-size: 18px;
-			width: 24px;
-			display: inline-block;
-			text-align: center;
-		}
-
-	}
-
 	.bb-icon-text-format:before {
 		color: rgba(18, 43, 70, 0.4);
 	}
@@ -608,6 +586,10 @@
 		margin-top: -3px;
 	}
 
+}
+
+.emojionearea .emojionearea-button {
+	margin-top: -1px;
 }
 
 // link previews
