--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3009,6 +3009,7 @@ span.dashicons.dashicons-admin-file:before {
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-text-wrap .CodeMirror {
   /* stylelint-disable-line */
   height: auto;
+  border-radius: 4px;
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity.code-full-view .document-text {
@@ -3054,10 +3055,14 @@ span.dashicons.dashicons-admin-file:before {
 .bb-activity-media-wrap .document-text-wrap {
   border: 1px solid #e7e9ec;
   border-width: 1px;
-  border-radius: 4px 4px 0 0;
+  border-radius: 4px;
   margin: 0 15px 15px;
   position: relative;
   text-align: center;
+}
+
+.bb-activity-media-wrap .document-text-wrap .document-text {
+  border-radius: 3px;
 }
 
 .bb-activity-media-wrap .document-text-wrap.is_large .document-text {
@@ -3115,10 +3120,12 @@ span.dashicons.dashicons-admin-file:before {
   padding: 7px 15px;
   background-color: #e7e9ec;
   word-break: break-word;
-  margin: -15px 15px 15px;
+  margin: -18px 15px 15px;
   border: 1px solid #e7e9ec;
   border-width: 0 1px 1px;
   border-radius: 0 0 4px 4px;
+  position: relative;
+  z-index: 112;
 }
 
 @media screen and (max-width: 420px) {
@@ -12672,6 +12679,7 @@ ul.bb-albums-list .bb-more-photos strong {
   }
   #buddypress .bb-document-theater .bb-media-section .img-section .img-block-wrap {
     height: auto;
+    padding-bottom: 10px;
   }
   #buddypress .bb-document-theater .bb-media-section.bb-media-no-preview .img-section > p {
     font-size: 16px;
@@ -12789,7 +12797,6 @@ ul.bb-albums-list .bb-more-photos strong {
   color: #939597;
   letter-spacing: -0.24px;
   line-height: 24px;
-  margin-right: 15px;
 }
 
 .bbm-uploader-model-wrap .bb-model-header .dashicons {
@@ -13525,13 +13532,17 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   background-color: #f5f5f5;
   overflow: auto;
 }
 
 .bb-document-theater .bb-media-section .img-section img {
-  padding: 20px;
-  max-height: calc(90vh - 30px);
+  padding: 20px 20px 10px;
+  max-height: calc(90vh - 75px);
 }
 
 .bb-document-theater .bb-media-section .document-text {
