--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1230,10 +1230,6 @@ ul.bb-albums-list {
 				word-break: break-word;
 			}
 
-			.document-preview {
-				padding-top: 35px;
-			}
-
 			.theater-command {
 				opacity: 1;
 				visibility: visible;
@@ -1986,7 +1982,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		align-items: flex-end;
 		position: static;
 		background-color: #fff;
-		border-radius: 4px 0 0 5px;
+		border-radius: 4px 4px 4px 5px;
 
 		.document-preview {
 			width: 100%;
@@ -2022,7 +2018,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		&.bb-media-no-preview {
 			background-color: #fff;
 			align-items: center;
-			border-radius: 4px 0 0 4px;
+			border-radius: 4px;
 
 			.bb-icon-loader {
 				font-size: 20px;
@@ -2061,7 +2057,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 		.img-section {
 			overflow: auto;
-			height: calc(90vh - 30px);
+			height: 90vh;
 			background-color: #fff;
 			display: -webkit-box;
 			display: -ms-flexbox;
@@ -2072,10 +2068,10 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			-webkit-box-pack: center;
 			-ms-flex-pack: center;
 			justify-content: center;
-			border-radius: 0 0 0 4px;
+			border-radius: 4px 4px 4px 4px;
 
 			.img-block-wrap {
-				height: calc(90vh - 30px);
+				height: 90vh;
 				width: 100%;
 				display: -webkit-box;
 				display: -ms-flexbox;
@@ -2092,6 +2088,8 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 				flex-direction: column;
 				background-color: #f5f5f5;
 				overflow: auto;
+				z-index: 1;
+				padding-top: 40px;
 			}
 
 			img {
@@ -2103,6 +2101,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 
 		.document-text {
 			width: 100%;
+			border-radius: 0 0 0 4px;
 		}
 
 		.document-audio {
@@ -2113,6 +2112,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			align-items: center;
 			justify-content: center;
 			background-color: #fff;
+			border-radius: 4px;
 
 			audio {
 				outline: 0;
@@ -2128,15 +2128,16 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			top: 0;
 			left: 0;
 			padding: 6px;
-			right: 375px;
+			right: 0;
 			text-align: center;
 			border-bottom: 1px solid #ecedee;
 			font-size: 17px;
 			font-weight: 400;
-			border-radius: 4px 0 0 0;
+			border-radius: 4px 4px 0 0;
 			white-space: nowrap;
 			overflow: hidden;
 			text-overflow: ellipsis;
+			z-index: 11;
 		}
 
 	}
@@ -2158,6 +2159,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 	.CodeMirror {/* stylelint-disable-line */
 		height: calc(90vh - 40px);
 		border-top: 1px solid #ecedee;
+		border-radius: 0 0 0 4px;
 	}
 
 	@media screen and (min-width: 768px) {
