--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -12686,9 +12686,6 @@ ul.bb-albums-list .bb-more-photos strong {
     padding: 0 10px;
     word-break: break-word;
   }
-  #buddypress .bb-document-theater .bb-media-section .document-preview {
-    padding-top: 35px;
-  }
   #buddypress .bb-document-theater .bb-media-section .theater-command {
     opacity: 1;
     visibility: visible;
@@ -13431,7 +13428,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   align-items: flex-end;
   position: static;
   background-color: #fff;
-  border-radius: 4px 0 0 5px;
+  border-radius: 4px 4px 4px 5px;
 }
 
 .bb-document-theater .bb-media-section .document-preview {
@@ -13468,7 +13465,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 .bb-document-theater .bb-media-section.bb-media-no-preview {
   background-color: #fff;
   align-items: center;
-  border-radius: 4px 0 0 4px;
+  border-radius: 4px;
 }
 
 .bb-document-theater .bb-media-section.bb-media-no-preview .bb-icon-loader {
@@ -13506,7 +13503,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 .bb-document-theater .bb-media-section .img-section {
   overflow: auto;
-  height: calc(90vh - 30px);
+  height: 90vh;
   background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13517,11 +13514,11 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  border-radius: 0 0 0 4px;
+  border-radius: 4px 4px 4px 4px;
 }
 
 .bb-document-theater .bb-media-section .img-section .img-block-wrap {
-  height: calc(90vh - 30px);
+  height: 90vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13538,6 +13535,8 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   flex-direction: column;
   background-color: #f5f5f5;
   overflow: auto;
+  z-index: 1;
+  padding-top: 40px;
 }
 
 .bb-document-theater .bb-media-section .img-section img {
@@ -13547,6 +13546,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 
 .bb-document-theater .bb-media-section .document-text {
   width: 100%;
+  border-radius: 0 0 0 4px;
 }
 
 .bb-document-theater .bb-media-section .document-audio {
@@ -13557,6 +13557,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   align-items: center;
   justify-content: center;
   background-color: #fff;
+  border-radius: 4px;
 }
 
 .bb-document-theater .bb-media-section .document-audio audio {
@@ -13572,15 +13573,16 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   top: 0;
   left: 0;
   padding: 6px;
-  right: 375px;
+  right: 0;
   text-align: center;
   border-bottom: 1px solid #ecedee;
   font-size: 17px;
   font-weight: 400;
-  border-radius: 4px 0 0 0;
+  border-radius: 4px 4px 0 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  z-index: 11;
 }
 
 .bb-document-theater .bb-media-info-section.document {
@@ -13601,6 +13603,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   /* stylelint-disable-line */
   height: calc(90vh - 40px);
   border-top: 1px solid #ecedee;
+  border-radius: 0 0 0 4px;
 }
 
 @media screen and (min-width: 768px) {
