Fixed document theater title alignment issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1983,6 +1983,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 		position: static;
 		background-color: #fff;
 		border-radius: 4px 4px 4px 5px;
+		position: relative;
 
 		.document-preview {
 			width: 100%;
