Fixed document theater image Download link spacing issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -2094,8 +2094,12 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader,
 			}
 
 			img {
-				padding: 20px 20px 10px;
+				padding: 20px 20px 8px;
 				max-height: calc(90vh - 75px);
+			}
+
+			a.download-button {
+				line-height: normal;
 			}
 
 		}
