Fixed Document popup border radius issue and Image overflow issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1209,7 +1209,7 @@ ul.bb-albums-list {
 			-webkit-box-align: center;
 			-ms-flex-align: center;
 			align-items: center;
-			border-radius: 4px 0 0 8px;
+			border-radius: 4px 4px 0 8px;
 
 			.img-section {
 				max-height: 60vh;
@@ -1221,6 +1221,10 @@ ul.bb-albums-list {
 				.img-block-wrap {
 					height: auto;
 					padding-bottom: 10px;
+
+					img {
+						max-height: calc(60vh - 81px);
+					}
 				}
 			}
 
