Document popup code block border radius fixed.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1255,6 +1255,7 @@ ul.bb-albums-list {
 
 			.CodeMirror {
 				height: calc(60vh - 40px);
+				border-radius: 4px 4px 0 0;
 			}
 
 			.document-preview h3 {
