--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -12738,6 +12738,7 @@ ul.bb-albums-list .bb-more-photos strong {
   }
   #buddypress .bb-document-theater .bb-media-section .CodeMirror {
     height: calc(60vh - 40px);
+    border-radius: 4px 4px 0 0;
   }
   #buddypress .bb-document-theater .bb-media-section .document-preview h3 {
     left: 0;
