--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -804,7 +804,7 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 .bb-media-model-wrapper .activity-list.item-list > .activity-media-description {
-	margin: 15px
+	margin: 15px;
 }
 
 .activity-media-description {
@@ -812,7 +812,7 @@ span.dashicons.dashicons-admin-file:before {
 
 	.bp-add-media-activity-description.show-edit {
 		display: inline-block;
-    	margin-right: 10px;
+		margin-right: 10px;
 
 		.add {
 			display: none;
@@ -825,10 +825,10 @@ span.dashicons.dashicons-admin-file:before {
 
 	.bp-add-media-activity-description.show-add {
 		display: inline-block;
-    	margin-right: 10px;
+		margin-right: 10px;
 
 		.add {
-			display: inline-block;	
+			display: inline-block;
 			margin-bottom: 10px;
 		}
 
