--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2607,8 +2607,40 @@ span.dashicons.dashicons-admin-file:before {
   overflow: visible;
 }
 
-.bb-media-model-wrapper .activity-list.item-list > .activity-media-description {
+#buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list > .activity-media-description {
   margin: 15px;
+}
+
+#buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list > .activity-media-description .download-document {
+  bottom: 0;
+  line-height: 1.5;
+  font-size: 14px;
+}
+
+#buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list {
+  position: relative;
+  height: 100%;
+  display: inline-block;
+}
+
+#buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list .activity-item {
+  margin-bottom: 40px;
+  max-height: calc(90vh - 40px);
+  min-height: calc(90vh - 40px);
+  position: static;
+}
+
+#buddypress .bb-media-model-wrapper.document-theatre .activity-list.bp-list .download-document {
+  position: absolute;
+  bottom: 0;
+  z-index: 999999;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 10px;
+  border-top: 1px solid #ecedee;
+  background-color: #fff;
+  line-height: 1.5;
 }
 
 .activity-media-description {
@@ -2640,12 +2672,6 @@ span.dashicons.dashicons-admin-file:before {
 
 .activity-media-description .bp-add-media-activity-description.show-add .edit {
   display: none;
-}
-
-.activity-media-description .download-document {
-  font-size: 13px;
-  display: inline-block;
-  margin-bottom: 10px;
 }
 
 .activity-media-description .bp-media-activity-description {
@@ -12713,15 +12739,21 @@ ul.bb-albums-list .bb-more-photos strong {
     flex: none;
     width: 100%;
     margin-left: 0;
+    max-height: calc(50vh - 40px);
+  }
+  #buddypress .bb-document-theater .bb-media-model-inner .bb-media-info-section.document .activity-list.bp-list {
+    min-height: calc(50vh - 40px);
+    max-height: calc(50vh - 40px);
   }
   #buddypress .bb-document-theater .bb-media-model-inner .bb-media-info-section.document li.activity_update {
-    min-height: auto;
+    min-height: calc(50vh - 80px);
+    max-height: calc(50vh - 80px);
   }
   #buddypress .bb-document-theater .bb-media-section {
     width: 100%;
     height: auto;
-    min-height: 260px;
-    max-height: 60vh;
+    min-height: 50vh;
+    max-height: 50vh;
     background-color: #fff;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -12729,7 +12761,7 @@ ul.bb-albums-list .bb-more-photos strong {
     border-radius: 4px 4px 0 8px;
   }
   #buddypress .bb-document-theater .bb-media-section .img-section {
-    max-height: 60vh;
+    max-height: 50vh;
     height: auto;
     display: block;
     text-align: center;
@@ -12737,10 +12769,11 @@ ul.bb-albums-list .bb-more-photos strong {
   }
   #buddypress .bb-document-theater .bb-media-section .img-section .img-block-wrap {
     height: auto;
-    padding-bottom: 10px;
+    padding-bottom: 0;
+    padding-bottom: 0;
   }
   #buddypress .bb-document-theater .bb-media-section .img-section .img-block-wrap img {
-    max-height: calc(60vh - 81px);
+    max-height: calc(50vh - 80px);
   }
   #buddypress .bb-document-theater .bb-media-section.bb-media-no-preview .img-section > p {
     font-size: 16px;
@@ -12763,8 +12796,11 @@ ul.bb-albums-list .bb-more-photos strong {
     padding: 0;
   }
   #buddypress .bb-document-theater .bb-media-section .CodeMirror {
-    height: calc(60vh - 40px);
+    height: calc(50vh - 40px);
     border-radius: 4px 4px 0 0;
+  }
+  #buddypress .bb-document-theater .bb-media-section .document-preview .document-text {
+    margin-top: 40px;
   }
   #buddypress .bb-document-theater .bb-media-section .document-preview h3 {
     right: 0;
@@ -13602,8 +13638,8 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
 }
 
 .bb-document-theater .bb-media-section .img-section img {
-  padding: 20px 20px 8px;
-  max-height: calc(90vh - 75px);
+  padding: 20px;
+  max-height: calc(90vh - 40px);
 }
 
 .bb-document-theater .bb-media-section .img-section a.download-button {
@@ -13659,6 +13695,7 @@ body.messages #buddypress #item-body #bp-group-messages-post-document-uploader .
   margin-left: -1px;
   border-radius: 0 4px 4px 0;
   overflow: hidden;
+  max-height: 90vh;
 }
 
 .bb-document-theater .document-text-file-data-hidden {
