--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1568,7 +1568,7 @@ body.post-type-bp-email .categorydiv label {
 	.article-child {
 
 		> ul > li {
-			list-style-type: none;
+			list-style-type: disc;
 		}
 
 		.actions,
